--- a/src/main-layout.hbs
+++ b/src/main-layout.hbs
@@ -5,7 +5,7 @@
 </head>
 <body>
 <a class="nav" href="/">⊙</a>
-{{{renderPage}}}
+<div data-render-page="{{page}}">{{{renderPage}}}</div>
 <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 <script src="/js/theme-test.js"></script>
 {{{pub-ux}}}
